bottone e prima parte player comletata

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font awsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- fontstyle -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Spotify</title>
 </head>
@@ -14,28 +22,38 @@
         <!-- player section -->
         <section>
             <div class="player">
-                <div class="player-col">
-                    <div class="image-player">
-                       aa
+                <div class="player-col separare">
+                    <div class="image-player pad-left">
+                       <img class="left-image" src="img/sinister.jpeg" alt="">
                     </div>
                     
-                    <div class="text"><h2>aa</h2>
-                    <p>aaa</p>
+                    <div class="text"><h2>Sinister</h2>
+                    <p>Brano Nome</p>
                     </div>
                     <div class="icons-player-left">
-                        aa aa
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-folder"></i>
                     </div>
                 </div>
                 <div class="player-col colum">
                     <div class="play">
-                        aa
+                        <i class="fa-solid fa-shuffle"></i>
+                        <i class="fa-solid fa-backward-step"></i>
+                        <i class="fa-regular fa-circle-play"></i>
+                        <i class="fa-solid fa-forward-step"></i>
+                        <i class="fa-solid fa-rotate-right"></i>
                     </div>
-                    <div class="play-bar">
-                        aa
+                    <div class="play">
+                        <div class="time">0:25</div>
+                        <div class="songbar">
+                            <hr>
+                        </div>
+                      
+                        <div class="time">4:35</div>
                     </div>
                 </div>
                 <div class="player-col">
-                    aa aaa aaa aaa
+                    aaaaaa aaa a a a aa a a a 
                 </div>
             </div>
         </section>
@@ -90,7 +108,7 @@
                     <!-- barra ugrade -->
                     <div class="upgrade-bar">
                         <div class="upgrade-button">
-                            <button><a href="">Effetua l'upgrade</a></button>
+                            <a href="">Effetua l'upgrade</a>
                         </div>
                     </div>
                     <div class="main-contenitore">
