effetto player side bar

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="play">
                         <i class="fa-solid fa-shuffle"></i>
                         <i class="fa-solid fa-backward-step"></i>
-                        <i class="fa-regular fa-circle-play"></i>
+                        <i class="dimensione fa-regular fa-circle-play"></i>
                         <i class="fa-solid fa-forward-step"></i>
                         <i class="fa-solid fa-rotate-right"></i>
                     </div>
@@ -102,12 +102,16 @@
                     <div class="container-sidebar bottom">
                         <div class="installa">
                             <img class="icon-sidebar" src="img/download.svg" alt="">
-                            <div class="sidebar-bottom-text text-sidebar">Installa app</div>
+                            <div class="sidebar-bottom-text text-sidebar"><ul>
+                                <li><a href="">Installa app</a></li>
+                            </ul>
+                                </div>
                         </div>
                         <hr>
                         <div class="installa">
                             <img class="icon-sidebar crc" src="img/profile.svg" alt="">
-                            <div class="sidebar-bottom-text text-sidebar">Jhon Doe</div>
+                            <div class="sidebar-bottom-text text-sidebar">
+                                <h3>Jhon Doe</h3></div>
                         </div>
                      
                     </div>
@@ -119,7 +123,7 @@
                 <div class="central">
                     <!-- barra ugrade -->
                     <div class="upgrade-bar">
-                        <div class="upgrade-button">
+                        <div class="dimensione upgrade-button">
                             <a href="">Effetua l'upgrade</a>
                         </div>
                     </div>
@@ -137,7 +141,10 @@
                         <h2>Recently played</h2>
                         <div class="song-container">
                             <div class="song">
-                                <img src="img/aquietplace.jpeg" alt="">
+                                <div class="play-hover"><img src="img/aquietplace.jpeg" alt="">
+                                    <i class=" fa-regular fa-circle-play"></i>
+                                </div>
+                                
                                 <div class="text">
                                     <h3>A quite place</h3>
                                     <h4>Subtitle</h4>
