--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                         <h2>Recently played</h2>
                         <div class="song-container">
                             <div class="song">
-                                <div class="play-hover"><img src="img/aquietplace.jpeg" alt="">
+                                <div class="play-hover">
+                                    <img    src="img/aquietplace.jpeg" alt="">
                                     <i class=" fa-regular fa-circle-play"></i>
                                 </div>
                                 
